--- a/pages/itemDetail/itemDetail.html
+++ b/pages/itemDetail/itemDetail.html
@@ -20,7 +20,7 @@
         <header aria-label="Header content" role="banner">
             <button class="win-backbutton" aria-label="Back" disabled type="button"></button>
             <h1 class="titlearea win-type-ellipsis">
-                <span class="pagetitle"></span>
+                <span id="pageTitle" class="pagetitle"></span>
             </h1>
         </header>
         <div class="content" aria-label="Main content" role="main">
@@ -28,11 +28,12 @@
                 <div>
                     <header>
                         <h2 class="item-title"></h2>
-                        <h4 class="item-subtitle"></h4>
+                        <h2 id="title" class="item-title"></h2>
+                       
                         <div class="item-owner"></div>
                     </header>
                     <img class="item-image" src="#" />
-                    <div class="item-content"></div>
+                    <div id="description" class="item-content"></div>
                 </div>
             </article>
         </div>
