Added add form and buttons

--- a/pages/Create/pagecontrol.html
+++ b/pages/Create/pagecontrol.html
@@ -21,10 +21,14 @@
             </h1>
         </header>
         <section aria-label="Main content" role="main">
+            <div class="addform">
             <h2>What's your idea?</h2>
-            <textarea></textarea>
-            Attach a file:
-            <input type="submit" value="Create"  />
+            <br /><br />
+            <textarea style="width:200px;height:100px;"></textarea>
+            <br />
+            
+            <input id="createpage" type="submit" value="Create"  />
+                </div>
         </section>
     </div>
 </body>
