--- a/pages/capture/capture.html
+++ b/pages/capture/capture.html
@@ -22,8 +22,9 @@
         </header>
         <section aria-label="Main content" role="main">
             <p>Use your camera to snap a pic or video of your idea.</p>
-           Idea caption:  <input type="text"  /><br />
-            <input type="button" id="pic" value="Take a Picture" /><br />
+           Idea caption:  <input id="caption" type="text"  /><br />
+            <input type="button" id="pic" value="Capture photo" /><br />
+             <input type="button" id="create" value="Create Idea" /><br />
    <span id="message"></span>
         </section>
     </div>
