--- a/pages/itemDetail/itemDetail.html
+++ b/pages/itemDetail/itemDetail.html
@@ -29,6 +29,7 @@
                     <header>
                         <h2 class="item-title"></h2>
                         <h4 class="item-subtitle"></h4>
+                        <div class="item-owner"></div>
                     </header>
                     <img class="item-image" src="#" />
                     <div class="item-content"></div>
