--- a/default.html
+++ b/default.html
@@ -11,14 +11,15 @@
 
     <!-- Migrii references -->
     <link href="/css/default.css" rel="stylesheet" />
+    
     <script src="/js/data.js"></script>
     <script src="/js/navigator.js"></script>
     <script src="/js/default.js"></script>
 </head>
 <body>
     <div id="contenthost" data-win-control="Application.PageControlNavigator" data-win-options="{home: '/pages/groupedItems/groupedItems.html'}"></div>
-    <!-- <div id="appbar" data-win-control="WinJS.UI.AppBar">
+    <div id="appbar" data-win-control="WinJS.UI.AppBar">
         <button data-win-control="WinJS.UI.AppBarCommand" data-win-options="{id:'cmd', label:'Command', icon:'placeholder'}" type="button"></button>
-    </div> -->
+    </div> 
 </body>
 </html>
