--- a/pages/groupDetail/groupDetail.html
+++ b/pages/groupDetail/groupDetail.html
@@ -21,6 +21,7 @@
         <img class="group-image" src="#" data-win-bind="src: backgroundImage; alt: title" />
         <h4 class="group-description" data-win-bind="innerHTML: description"></h4>
     </div>
+
     <div class="itemtemplate" data-win-control="WinJS.Binding.Template">
         <div class="item">
             <img class="item-image" src="#" data-win-bind="src: backgroundImage; alt: title" />
@@ -37,7 +38,7 @@
         <header aria-label="Header content" role="banner">
             <button class="win-backbutton" aria-label="Back" disabled type="button"></button>
             <h1 class="titlearea win-type-ellipsis">
-                <span class="pagetitle"></span>
+               <span class="pagetitle"> <img src="/images/m.jpg" alt="Migrii" height="70" /></span>
             </h1>
         </header>
         <section aria-label="Main content" role="main">
