updated UI and detail page

--- a/pages/itemDetail/itemDetail.html
+++ b/pages/itemDetail/itemDetail.html
@@ -27,10 +27,13 @@
             <article>
                 <div>
                     <header>
+                        <div class="item-owner">
+                                <img class="picture" />
+                                <span></span>
+                        </div>
                         <h2 class="item-title"></h2>
                         <h2 id="title" class="item-title"></h2>
                        
-                        <div class="item-owner"></div>
                     </header>
                     <img class="item-image" src="#" />
                     <div id="description" class="item-content"></div>
