added real fake data, tile background task

--- a/pages/itemDetail/itemDetail.html
+++ b/pages/itemDetail/itemDetail.html
@@ -35,6 +35,16 @@
                         <h4 class="item-subtitle"></h4>
                     </header>
                     <img class="item-image" src="#" />
+                    
+                    <div class="rate">
+                        
+                        <label for="ratingControlDiv">
+                            Rate this idea : 
+                        </label>
+                        <div id="ratingControlDiv" data-win-control="WinJS.UI.Rating">
+                        </div>
+
+                    </div>
                     <div class="item-content"></div>
                 </div>
             </article>
