--- a/pages/capture/capture.html
+++ b/pages/capture/capture.html
@@ -26,6 +26,8 @@
             <input type="button" id="pic" value="Capture photo" /><br />
              <input type="button" id="create" value="Create Idea" /><br />
    <span id="message"></span>
+
+            <img id="pictureUploaded"></img>
         </section>
     </div>
 </body>
